refactor: begin recoloring and cleanup