@@ -9,6 +9,7 @@ import io.github.alathra.alathraskills.api.SkillsPlayerManager;
 import io.github.alathra.alathraskills.gui.GuiHelper;
 import io.github.alathra.alathraskills.utility.Cfg;
 import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.TextDecoration;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.OfflinePlayer;
@@ -18,6 +19,7 @@ import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.inventory.meta.SkullMeta;
 
 import java.util.Collections;
+import java.util.List;
 
 public class PopulateContent {
 
@@ -36,24 +38,34 @@ public class PopulateContent {
 
         ItemStack availableSkillPoints = new ItemStack(Material.END_CRYSTAL);
         ItemMeta availableSkillPointsMeta = availableSkillPoints.getItemMeta();
-        availableSkillPointsMeta.displayName(ColorParser.of(GuiHelper.EXPERIENCE_GRADIENT + "Available Skill Points").build());
-        availableSkillPointsMeta.lore(Collections.singletonList(ColorParser.of("Amount: " + skillPointsAvailable).build())); // TODO
+        availableSkillPointsMeta.displayName(ColorParser.of(GuiHelper.EXPERIENCE_GRADIENT + "Skill Points").build().decoration(TextDecoration.ITALIC, false));
+        availableSkillPointsMeta.lore(
+            List.of(
+                ColorParser.of("<color:#a8a8a8>Points: "+ skillPointsAvailable).build(),
+                ColorParser.of("<color:#a8a8a8>Next Point: %s/%s".formatted(remainingExp, totalExp)).build()
+            )
+        );
         availableSkillPoints.setItemMeta(availableSkillPointsMeta);
 
         ItemStack exit = new ItemStack(Material.BARRIER);
         ItemMeta exitMeta = exit.getItemMeta();
-        exitMeta.displayName(ColorParser.of("Close").build());
+        exitMeta.displayName(ColorParser.of("<red>Close").build().decoration(TextDecoration.ITALIC, false));
         exit.setItemMeta(exitMeta);
 
         ItemStack optionsButton = new ItemStack(Material.COMPARATOR);
         ItemMeta optionsMeta = optionsButton.getItemMeta();
-        optionsMeta.displayName(ColorParser.of("Options").build());
+        optionsMeta.displayName(ColorParser.of("<aqua>Options").build().decoration(TextDecoration.ITALIC, false)); // TODO Replace with custom rgb color
+        optionsMeta.lore(
+            List.of(
+                ColorParser.of("<color:#a8a8a8>Open the options menu").build()
+            )
+        );
         optionsButton.setItemMeta(optionsMeta);
 
-        ItemStack openDisable = new ItemStack(Material.LEVER);
-        ItemMeta disableMeta = openDisable.getItemMeta();
-        disableMeta.displayName(ColorParser.of("Disable passive skills").build());
-        openDisable.setItemMeta(disableMeta);
+//        ItemStack openDisable = new ItemStack(Material.LEVER);
+//        ItemMeta disableMeta = openDisable.getItemMeta();
+//        disableMeta.displayName(ColorParser.of("Disable passive skills").build().decoration(TextDecoration.ITALIC, false));
+//        openDisable.setItemMeta(disableMeta);
 
         ItemStack border = new ItemStack(Material.GRAY_STAINED_GLASS_PANE);
         ItemMeta borderMeta = border.getItemMeta();
