@@ -8,6 +8,7 @@ import io.github.alathra.alathraskills.api.SkillsPlayerManager;
 import io.github.alathra.alathraskills.gui.GuiHelper;
 import io.github.alathra.alathraskills.utility.Cfg;
 import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.TextDecoration;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.OfflinePlayer;
@@ -16,6 +17,7 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
 import java.util.Collections;
+import java.util.List;
 
 public class PopulateButtons {
 
@@ -23,49 +25,35 @@ public class PopulateButtons {
 
     public static void populateButtons(Gui gui, Player player, int skillCategoryId, int page) {
 
-
-        switch (skillCategoryId) {
-            case 1 -> {
-                populateFarmingButtons(gui, player, page);
-            }
-            case 2 -> {
-                populateMiningButtons(gui, player, page);
-            }
-            case 3 -> {
-                populateWoodcuttingButtons(gui, player, page);
-            }
-            default -> {
-                return;
-            }
-        }
-    }
-
-    private static void populateWoodcuttingButtons(Gui gui, Player player, int page) {
-
         ItemStack returnStack = new ItemStack(Material.ARROW);
         ItemMeta returnMeta = returnStack.getItemMeta();
-        returnMeta.displayName(ColorParser.of("<red>Previous page").build());
+        returnMeta.displayName(ColorParser.of("<red>Previous page").build().decoration(TextDecoration.ITALIC, false));
         returnStack.setItemMeta(returnMeta);
 
         ItemStack nextStack = new ItemStack(Material.ARROW);
         ItemMeta nextMeta = returnStack.getItemMeta();
-        nextMeta.displayName(ColorParser.of("<green>Next page").build());
+        nextMeta.displayName(ColorParser.of("<green>Next page").build().decoration(TextDecoration.ITALIC, false));
         nextStack.setItemMeta(nextMeta);
 
-        ItemStack openSkillTrees = new ItemStack(Material.EXPERIENCE_BOTTLE);
+        ItemStack openSkillTrees = new ItemStack(Material.PAPER);
         ItemMeta openSkillTreesMeta = openSkillTrees.getItemMeta();
-        openSkillTreesMeta.displayName(ColorParser.of("<yellow><bold>Back to Skill Trees").build());
+        openSkillTreesMeta.displayName(ColorParser.of("<red>Back").build().decoration(TextDecoration.ITALIC, false));
         openSkillTrees.setItemMeta(openSkillTreesMeta);
 
         ItemStack exit = new ItemStack(Material.BARRIER);
         ItemMeta exitMeta = exit.getItemMeta();
-        exitMeta.displayName(ColorParser.of("<dark_red><bold>Exit").build());
+        exitMeta.displayName(ColorParser.of("<red>Close").build().decoration(TextDecoration.ITALIC, false));
         exit.setItemMeta(exitMeta);
 
-        ItemStack availableSkillPoints = new ItemStack(Material.BOOK);
+        ItemStack availableSkillPoints = new ItemStack(Material.END_CRYSTAL);
         ItemMeta availableSkillPointsMeta = availableSkillPoints.getItemMeta();
-        availableSkillPointsMeta.displayName(ColorParser.of("<red><bold>Available Skill Points").build());
-        availableSkillPointsMeta.lore(Collections.singletonList(ColorParser.of("<yellow>Amount: " + availableSkillPoints(player)).build()));
+        availableSkillPointsMeta.displayName(ColorParser.of(GuiHelper.EXPERIENCE_GRADIENT + "Skill Points").build().decoration(TextDecoration.ITALIC, false));
+        availableSkillPointsMeta.lore(
+            List.of(
+                ColorParser.of("<color:#a8a8a8>Points: "+ availableSkillPoints(player)).build()/*,
+                ColorParser.of("<color:#a8a8a8>Next Level: %s/%s".formatted(remainingExp, totalExp)).build()*/ // TODO Implement methods to show these
+            )
+        );
         availableSkillPoints.setItemMeta(availableSkillPointsMeta);
 
         ItemStack border = new ItemStack(Material.GRAY_STAINED_GLASS_PANE);
@@ -77,147 +65,25 @@ public class PopulateButtons {
             case 1 -> {
                 gui.getFiller().fill(ItemBuilder.from(border).asGuiItem());
 
-                gui.setItem(6, 1, ItemBuilder.from(openSkillTrees).asGuiItem(event -> GuiHelper.openSkillCategoryGui(player)));
+                gui.setItem(6, 1, ItemBuilder.from(openSkillTrees).asGuiItem(event -> GuiHelper.openMainGui(player)));
                 gui.setItem(6, 5, ItemBuilder.from(availableSkillPoints).asGuiItem());
-                gui.setItem(6, 6, ItemBuilder.from(nextStack).asGuiItem(event -> GuiHelper.openSkillGui(player, 3, page + 1)));
+                gui.setItem(6, 6, ItemBuilder.from(nextStack).asGuiItem(event -> GuiHelper.openSkillGui(player, skillCategoryId, page + 1)));
                 gui.setItem(6, 9, ItemBuilder.from(exit).asGuiItem(event -> gui.close(player)));
             }
             case 2, 3 -> {
                 gui.getFiller().fill(ItemBuilder.from(border).asGuiItem());
 
-                gui.setItem(6, 1, ItemBuilder.from(openSkillTrees).asGuiItem(event -> GuiHelper.openSkillCategoryGui(player)));
-                gui.setItem(6, 4, ItemBuilder.from(returnStack).asGuiItem(event -> GuiHelper.openSkillGui(player, 3, page - 1)));
+                gui.setItem(6, 1, ItemBuilder.from(openSkillTrees).asGuiItem(event -> GuiHelper.openMainGui(player)));
+                gui.setItem(6, 4, ItemBuilder.from(returnStack).asGuiItem(event -> GuiHelper.openSkillGui(player, skillCategoryId, page - 1)));
                 gui.setItem(6, 5, ItemBuilder.from(availableSkillPoints).asGuiItem());
-                gui.setItem(6, 6, ItemBuilder.from(nextStack).asGuiItem(event -> GuiHelper.openSkillGui(player, 3, page + 1)));
+                gui.setItem(6, 6, ItemBuilder.from(nextStack).asGuiItem(event -> GuiHelper.openSkillGui(player, skillCategoryId, page + 1)));
                 gui.setItem(6, 9, ItemBuilder.from(exit).asGuiItem(event -> gui.close(player)));
             }
             case 4 -> {
                 gui.getFiller().fill(ItemBuilder.from(border).asGuiItem());
 
-                gui.setItem(6, 1, ItemBuilder.from(openSkillTrees).asGuiItem(event -> GuiHelper.openSkillCategoryGui(player)));
-                gui.setItem(6, 4, ItemBuilder.from(returnStack).asGuiItem(event -> GuiHelper.openSkillGui(player, 3, page - 1)));
-                gui.setItem(6, 5, ItemBuilder.from(availableSkillPoints).asGuiItem());
-                gui.setItem(6, 9, ItemBuilder.from(exit).asGuiItem(event -> gui.close(player)));
-            }
-        }
-    }
-
-    private static void populateMiningButtons(Gui gui, Player player, int page) {
-        ItemStack returnStack = new ItemStack(Material.ARROW);
-        ItemMeta returnMeta = returnStack.getItemMeta();
-        returnMeta.displayName(ColorParser.of("<red>Previous page").build());
-        returnStack.setItemMeta(returnMeta);
-
-        ItemStack nextStack = new ItemStack(Material.ARROW);
-        ItemMeta nextMeta = returnStack.getItemMeta();
-        nextMeta.displayName(ColorParser.of("<green>Next page").build());
-        nextStack.setItemMeta(nextMeta);
-
-        ItemStack openSkillTrees = new ItemStack(Material.EXPERIENCE_BOTTLE);
-        ItemMeta openSkillTreesMeta = openSkillTrees.getItemMeta();
-        openSkillTreesMeta.displayName(ColorParser.of("<yellow><bold>Back to Skill Trees").build());
-        openSkillTrees.setItemMeta(openSkillTreesMeta);
-
-        ItemStack exit = new ItemStack(Material.BARRIER);
-        ItemMeta exitMeta = exit.getItemMeta();
-        exitMeta.displayName(ColorParser.of("<dark_red><bold>Exit").build());
-        exit.setItemMeta(exitMeta);
-
-        ItemStack availableSkillPoints = new ItemStack(Material.BOOK);
-        ItemMeta availableSkillPointsMeta = availableSkillPoints.getItemMeta();
-        availableSkillPointsMeta.displayName(ColorParser.of("<red><bold>Available Skill Points").build());
-        availableSkillPointsMeta.lore(Collections.singletonList(ColorParser.of("<yellow>Amount: " + availableSkillPoints(player)).build()));
-        availableSkillPoints.setItemMeta(availableSkillPointsMeta);
-
-        ItemStack border = new ItemStack(Material.GRAY_STAINED_GLASS_PANE);
-        ItemMeta borderMeta = border.getItemMeta();
-        borderMeta.displayName(Component.text(""));
-        border.setItemMeta(borderMeta);
-
-        switch (page) {
-            case 1 -> {
-                gui.getFiller().fill(ItemBuilder.from(border).asGuiItem());
-
-                gui.setItem(6, 1, ItemBuilder.from(openSkillTrees).asGuiItem(event -> GuiHelper.openSkillCategoryGui(player)));
-                gui.setItem(6, 5, ItemBuilder.from(availableSkillPoints).asGuiItem());
-                gui.setItem(6, 6, ItemBuilder.from(nextStack).asGuiItem(event -> GuiHelper.openSkillGui(player, 2, page + 1)));
-                gui.setItem(6, 9, ItemBuilder.from(exit).asGuiItem(event -> gui.close(player)));
-            }
-            case 2, 3 -> {
-                gui.getFiller().fill(ItemBuilder.from(border).asGuiItem());
-
-                gui.setItem(6, 1, ItemBuilder.from(openSkillTrees).asGuiItem(event -> GuiHelper.openSkillCategoryGui(player)));
-                gui.setItem(6, 4, ItemBuilder.from(returnStack).asGuiItem(event -> GuiHelper.openSkillGui(player, 2, page - 1)));
-                gui.setItem(6, 5, ItemBuilder.from(availableSkillPoints).asGuiItem());
-                gui.setItem(6, 6, ItemBuilder.from(nextStack).asGuiItem(event -> GuiHelper.openSkillGui(player, 2, page + 1)));
-                gui.setItem(6, 9, ItemBuilder.from(exit).asGuiItem(event -> gui.close(player)));
-            }
-            case 4 -> {
-                gui.getFiller().fill(ItemBuilder.from(border).asGuiItem());
-
-                gui.setItem(6, 1, ItemBuilder.from(openSkillTrees).asGuiItem(event -> GuiHelper.openSkillCategoryGui(player)));
-                gui.setItem(6, 4, ItemBuilder.from(returnStack).asGuiItem(event -> GuiHelper.openSkillGui(player, 2, page - 1)));
-                gui.setItem(6, 5, ItemBuilder.from(availableSkillPoints).asGuiItem());
-                gui.setItem(6, 9, ItemBuilder.from(exit).asGuiItem(event -> gui.close(player)));
-            }
-        }
-    }
-
-    private static void populateFarmingButtons(Gui gui, Player player, int page) {
-        ItemStack returnStack = new ItemStack(Material.ARROW);
-        ItemMeta returnMeta = returnStack.getItemMeta();
-        returnMeta.displayName(ColorParser.of("<red>Previous page").build());
-        returnStack.setItemMeta(returnMeta);
-
-        ItemStack nextStack = new ItemStack(Material.ARROW);
-        ItemMeta nextMeta = returnStack.getItemMeta();
-        nextMeta.displayName(ColorParser.of("<green>Next page").build());
-        nextStack.setItemMeta(nextMeta);
-
-        ItemStack openSkillTrees = new ItemStack(Material.EXPERIENCE_BOTTLE);
-        ItemMeta openSkillTreesMeta = openSkillTrees.getItemMeta();
-        openSkillTreesMeta.displayName(ColorParser.of("<yellow><bold>Back to Skill Trees").build());
-        openSkillTrees.setItemMeta(openSkillTreesMeta);
-
-        ItemStack exit = new ItemStack(Material.BARRIER);
-        ItemMeta exitMeta = exit.getItemMeta();
-        exitMeta.displayName(ColorParser.of("<dark_red><bold>Exit").build());
-        exit.setItemMeta(exitMeta);
-
-        ItemStack availableSkillPoints = new ItemStack(Material.BOOK);
-        ItemMeta availableSkillPointsMeta = availableSkillPoints.getItemMeta();
-        availableSkillPointsMeta.displayName(ColorParser.of("<red><bold>Available Skill Points").build());
-        availableSkillPointsMeta.lore(Collections.singletonList(ColorParser.of("<yellow>Amount: " + availableSkillPoints(player)).build()));
-        availableSkillPoints.setItemMeta(availableSkillPointsMeta);
-
-        ItemStack border = new ItemStack(Material.GRAY_STAINED_GLASS_PANE);
-        ItemMeta borderMeta = border.getItemMeta();
-        borderMeta.displayName(Component.text(""));
-        border.setItemMeta(borderMeta);
-
-        switch (page) {
-            case 1 -> {
-                gui.getFiller().fill(ItemBuilder.from(border).asGuiItem());
-
-                gui.setItem(6, 1, ItemBuilder.from(openSkillTrees).asGuiItem(event -> GuiHelper.openSkillCategoryGui(player)));
-                gui.setItem(6, 5, ItemBuilder.from(availableSkillPoints).asGuiItem());
-                gui.setItem(6, 6, ItemBuilder.from(nextStack).asGuiItem(event -> GuiHelper.openSkillGui(player, 1, page + 1)));
-                gui.setItem(6, 9, ItemBuilder.from(exit).asGuiItem(event -> gui.close(player)));
-            }
-            case 2, 3 -> {
-                gui.getFiller().fill(ItemBuilder.from(border).asGuiItem());
-
-                gui.setItem(6, 1, ItemBuilder.from(openSkillTrees).asGuiItem(event -> GuiHelper.openSkillCategoryGui(player)));
-                gui.setItem(6, 4, ItemBuilder.from(returnStack).asGuiItem(event -> GuiHelper.openSkillGui(player, 1, page - 1)));
-                gui.setItem(6, 5, ItemBuilder.from(availableSkillPoints).asGuiItem());
-                gui.setItem(6, 6, ItemBuilder.from(nextStack).asGuiItem(event -> GuiHelper.openSkillGui(player, 1, page + 1)));
-                gui.setItem(6, 9, ItemBuilder.from(exit).asGuiItem(event -> gui.close(player)));
-            }
-            case 4 -> {
-                gui.getFiller().fill(ItemBuilder.from(border).asGuiItem());
-
-                gui.setItem(6, 1, ItemBuilder.from(openSkillTrees).asGuiItem(event -> GuiHelper.openSkillCategoryGui(player)));
-                gui.setItem(6, 4, ItemBuilder.from(returnStack).asGuiItem(event -> GuiHelper.openSkillGui(player, 1, page - 1)));
+                gui.setItem(6, 1, ItemBuilder.from(openSkillTrees).asGuiItem(event -> GuiHelper.openMainGui(player)));
+                gui.setItem(6, 4, ItemBuilder.from(returnStack).asGuiItem(event -> GuiHelper.openSkillGui(player, skillCategoryId, page - 1)));
                 gui.setItem(6, 5, ItemBuilder.from(availableSkillPoints).asGuiItem());
                 gui.setItem(6, 9, ItemBuilder.from(exit).asGuiItem(event -> gui.close(player)));
             }
